--- a/weekly-server-0.1/client/admin/bower.json
+++ b/weekly-server-0.1/client/admin/bower.json
@@ -16,7 +16,8 @@
     "angular-bootstrap-datetimepicker": "^1.1.3",
     "moment": "^2.15.2",
     "angular-bootstrap-toggle-switch": "^0.5.6",
-    "angular-file-upload": "^2.4.1"
+    "angular-file-upload": "^2.4.1",
+    "angular-loading-overlay": "^1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
